zeit.content.video changes
==========================

2.0.5 (unreleased)
------------------

- Nothing changed yet.


2.0.4 (2011-12-01)
------------------

- Fix XMLReferenceUpdater so it doesn't grow lots of superfluous video-still
  nodes (#10028).


2.0.3 (2011-11-24)
------------------

- Fix access to `id_prefix` for videos and playlists (#10015)


2.0.2 (2011-11-23)
------------------

- Fix 2.0.1 which misses serie.xml file


2.0.1 (2011-11-23)
------------------

- Use special video series.

- Hide the subtitle field.


2.0 (2011-11-13)
----------------

- Total rewrite. For earlier versions, see the subversion repository at
  <https://code.gocept.com/svn/gocept-int/zeit.cms/zeit.content.video/>.